welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: ':' expected but '(' found.
def reproduireMotif (T:Array[Color], litMessage().toInt:Int) {
                                               ^Array2:36: error: identifier expected but '}' found.
}
^